Tue Mar  4 17:39:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (update_entries): Add comment about "move away <file>"
	message.

Mon Mar  3 21:51:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb): Clean up topfile,v at end of test.  Fixes
	failure in modules-155b.

Sun Mar  2 18:11:09 1997  Dan Wilder  <dan@gasboy.com>
			  and Jim Kingdon

	* admin.c (admin): Arrange to perform recursion if "cvs admin"
	is passed only options.

Sun Mar  2 18:11:09 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb): New tests basicb-0* test for files at top
	level.

	* error.c (error): Add newline to "out of memory" message.  I think
	that its omission probably could cause the message to be lost in
	the bowels of server.c and never passed to the user.

	* client.c (start_rsh_server): Add comment about "remsh" vs. "rsh".

	* cvs.h: Move copyright notice to top of file.

Sun Mar  2 13:44:36 1997  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh: Use -n when testing whether rsh works.

	* server.c (serve_root): Free path.

Sun Mar  2 13:12:46 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	The following are things that I noticed in the process of trying
	to track down:
	  can't create temporary directory
	  Unknown error -1
	  FAIL: test 28
	from nightly testing.  I'm not sure that either item explains that
	message however.
	* server.c (server): Allocate pending_error_text;
	print_pending_error will try to free it so
	  pending_error_text = "foo"
	won't work.
	(mkdir_p): Don't assume that isdir will leave errno unmolested.

Thu Feb 27 15:29:58 1997  Ian Lance Taylor  <ian@cygnus.com>

	* remove.c (cvsremove): When forcing removal in client mode, use
	start_recursion rather than calling CVS_UNLINK on each argument.
	(remove_force_fileproc): New static function.
	* sanity.sh (deep): Add tests deep-rm7 through deep-rm10 for above
	patch.

	* sanity.sh (death): Enable death-76a0 and death-76a1 tests for